[package]
name = "retrotv-file"
version = "0.0.2-alpha"
edition = "2024"
authors = ["RetroTV <yjj8353@gmail.com>"]
description = "A simple file handling library in Rust."
license = "MIT"
repository = "https://github.com/retrotv-crates-repo/files"

[dependencies]
fs_extra = "1.3.0"
hex = "0.4.3"
sha2 = "0.10.9"
